objects/vlocity_ins__DocumentClauseCondition__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__DocumentClauseId__c</fullName>
        <label>Document Clause</label>
        <referenceTo>vlocity_ins__DocumentClause__c</referenceTo>
        <relationshipLabel>Document Clause Conditions</relationshipLabel>
        <relationshipName>Product_Terms_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Terms_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Clause Condition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Clause Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>